[gd_scene load_steps=4 format=3 uid="uid://cie6bchbc6626"]

[ext_resource type="Texture2D" uid="uid://c1wqo87dbv7m" path="res://assets/pause.png" id="1_1214w"]
[ext_resource type="Script" path="res://scripts/ui/pause.gd" id="1_qverc"]
[ext_resource type="Theme" uid="uid://c2f6p6bex2d8r" path="res://other/theme.tres" id="2_xsrim"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qverc")

[node name="PauseButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 238.733
offset_top = 2.97302
offset_right = 246.733
offset_bottom = 10.973
texture_normal = ExtResource("1_1214w")

[node name="PauseMenu" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Right" type="ColorRect" parent="PauseMenu"]
layout_mode = 0
offset_left = 157.0
offset_top = -1.0
offset_right = 251.0
offset_bottom = 151.0
color = Color(0, 0, 0, 0.454902)

[node name="Left" type="ColorRect" parent="PauseMenu"]
layout_mode = 0
offset_left = -2.0
offset_top = -1.0
offset_right = 251.0
offset_bottom = 151.0
color = Color(0, 0, 0, 0.415686)

[node name="Resume" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 167.779
offset_top = 64.7913
offset_right = 239.779
offset_bottom = 92.7913
theme = ExtResource("2_xsrim")
text = "RESUME"

[node name="Quit" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 167.779
offset_top = 104.639
offset_right = 239.779
offset_bottom = 132.639
theme = ExtResource("2_xsrim")
text = "QUIT"

[node name="Label" type="Label" parent="PauseMenu"]
layout_mode = 0
offset_left = 174.398
offset_top = 13.0839
offset_right = 234.398
offset_bottom = 51.0839
text = "Game
Paused"
horizontal_alignment = 1

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="PauseMenu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/Quit" to="." method="_on_quit_pressed"]
